maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: illegal start of declaration
  Direction.setDirection(dir)
  ^Escaper:36: error: illegal start of declaration
  if (estFaceMur())
  ^Escaper:37: error: illegal start of declaration
  {
  ^